tmp/iptables
# Generated by iptables-save v1.4.21 on Tue May 28 10:45:24 2019
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1738519:835411508]
-A INPUT -s 212.75.210.238/32 -p tcp -m tcp --dport 1521 -m comment --comment "vipnet komiats ora" -j ACCEPT
-A INPUT -s 212.75.210.203/32 -p tcp -m tcp --dport 1521 -m comment --comment "perspective.eltc.ru" -j ACCEPT
-A INPUT -s 10.102.109.208/32 -p tcp -m tcp --dport 1521 -m comment --comment "kolokoltosov ora" -j ACCEPT
-A INPUT -s 10.102.100.40/32 -p tcp -m tcp --dport 1521 -m comment --comment "pavel popov ora" -j ACCEPT
-A INPUT -s 10.110.1.108/32 -p tcp -m tcp --dport 1521 -m comment --comment "he.x.eltc.ru" -j ACCEPT
-A INPUT -s 10.102.101.150/32 -p tcp -m tcp --dport 1521 -m comment --comment "test ELTC ORA" -j ACCEPT
-A INPUT -s 212.75.210.198/32 -p tcp -m tcp --dport 1521 -m comment --comment "Avtomoiki API" -j ACCEPT
-A INPUT -s 10.102.109.235/32 -p tcp -m tcp --dport 1521 -m comment --comment "Nenashev ORA" -j ACCEPT
-A INPUT -s 10.102.109.188/32 -p tcp -m tcp --dport 1521 -m comment --comment "Antonov ORA" -j ACCEPT
-A INPUT -s 10.102.109.118/32 -p tcp -m tcp --dport 1521 -m comment --comment "Nosorev ORA" -j ACCEPT
-A INPUT -s 10.102.109.198/32 -p tcp -m tcp --dport 1521 -m comment --comment "Vorontsov ORA" -j ACCEPT
-A INPUT -s 10.102.109.157/32 -p tcp -m tcp --dport 1521 -m comment --comment "Vorontsov ORA" -j ACCEPT
-A INPUT -s 10.102.100.64/32 -p tcp -m tcp --dport 1521 -m comment --comment "Pankin ORA" -j ACCEPT
-A INPUT -s 212.75.210.188/32 -p tcp -m tcp --dport 1521 -m comment --comment "Test ORDS ORA" -j ACCEPT
-A INPUT -s 10.102.109.51/32 -p tcp -m tcp --dport 1521 -m comment --comment "Buslov ORA" -j ACCEPT
-A INPUT -s 10.102.109.54/32 -p tcp -m tcp --dport 1521 -m comment --comment "Totskiy A" -j ACCEPT
-A INPUT -s 10.102.100.242/32 -p tcp -m tcp --dport 1521 -m comment --comment "Zhukov A" -j ACCEPT
-A INPUT -s 10.102.126.13/32 -p tcp -m tcp --dport 1521 -m comment --comment "Dolinia S" -j ACCEPT
-A INPUT -s 10.102.101.103/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 212.75.210.205/32 -p tcp -m tcp --dport 1521 -j ACCEPT
-A INPUT -s 10.102.100.177/32 -p tcp -m tcp --dport 1521 -j ACCEPT
-A INPUT -s 10.110.20.103/32 -p tcp -m tcp --dport 1521 -j ACCEPT
-A INPUT -s 10.102.100.55/32 -p tcp -m tcp --dport 1521 -j ACCEPT
-A INPUT -s 10.102.101.22/32 -p tcp -m tcp --dport 1521 -j ACCEPT
-A INPUT -s 10.102.101.176/32 -p tcp -m tcp --dport 1521 -j ACCEPT
-A INPUT -s 10.102.101.163/32 -p tcp -m tcp --dport 1521 -j ACCEPT
-A INPUT -s 10.110.100.81/32 -p tcp -m tcp --dport 1521 -j ACCEPT
-A INPUT -s 10.110.105.30/32 -p tcp -m tcp --dport 1521 -j ACCEPT
-A INPUT -s 10.110.105.44/32 -p tcp -m tcp --dport 1521 -j ACCEPT
-A INPUT -s 10.110.2.2/32 -p tcp -m tcp --dport 1521 -j ACCEPT
-A INPUT -s 10.110.2.10/32 -p tcp -m tcp --dport 1521 -j ACCEPT
-A INPUT -s 10.102.105.39/32 -p tcp -m tcp --dport 1521 -j ACCEPT
-A INPUT -s 10.102.105.30/32 -p tcp -m tcp --dport 1521 -j ACCEPT
-A INPUT -s 10.102.126.13/32 -p tcp -m tcp --dport 1521 -j ACCEPT
-A INPUT -s 10.102.101.96/32 -p tcp -m tcp --dport 1521 -j ACCEPT
-A INPUT -s 10.102.101.94/32 -p tcp -m tcp --dport 1521 -j ACCEPT
-A INPUT -s 10.102.101.95/32 -p tcp -m tcp --dport 1521 -j ACCEPT
-A INPUT -s 10.102.101.93/32 -p tcp -m tcp --dport 1521 -j ACCEPT
-A INPUT -s 10.102.101.58/32 -p tcp -m tcp --dport 1521 -j ACCEPT
-A INPUT -s 10.102.101.56/32 -p tcp -m tcp --dport 1521 -j ACCEPT
-A INPUT -s 10.102.101.55/32 -p tcp -m tcp --dport 1521 -j ACCEPT
-A INPUT -s 10.102.101.50/32 -p tcp -m tcp --dport 1521 -j ACCEPT
-A INPUT -s 10.102.101.49/32 -p tcp -m tcp --dport 1521 -j ACCEPT
-A INPUT -s 10.102.101.16/32 -p tcp -m tcp --dport 1521 -j ACCEPT
-A INPUT -s 212.75.210.156/32 -p tcp -m tcp --dport 1521 -j ACCEPT
-A INPUT -s 212.75.210.33/32 -p tcp -m tcp --dport 1521 -j ACCEPT
-A INPUT -s 10.102.101.189/32 -p tcp -m tcp --dport 1521 -j ACCEPT
-A INPUT -s 212.75.210.69/32 -p tcp -m tcp --dport 1521 -j ACCEPT
-A INPUT -s 10.102.100.242/32 -p tcp -m tcp --dport 1521 -j ACCEPT
-A INPUT -s 10.102.100.64/32 -p tcp -m tcp --dport 1521 -j ACCEPT
-A INPUT -s 10.102.106.80/32 -j ACCEPT
-A INPUT -s 10.102.106.80/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -s 10.102.102.56/32 -p tcp -m tcp --dport 5500 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -s 10.102.102.56/32 -p tcp -m tcp --dport 1521 -j ACCEPT
-A INPUT -s 10.102.102.56/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 10.102.100.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 10.110.55.0/24 -p tcp -m tcp --dport 10050 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A OUTPUT -s 10.102.101.103/32 -p tcp -m tcp --dport 443 -j ACCEPT
COMMIT
# Completed on Tue May 28 10:45:24 2019
